# kestrel

./: .codecov.yml  .gitignore  AGENT.md  AGENTS.md  ARCH_PROBLEM_FIXES.md  ARCH_REFACTOR_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  GEMINI.md  GOVERNANCE.md  IMPLEMENTATION_PLAN.md  LICENSE  MAINTAINERS.md  MIGRATION.md  PLANNING.md  PROGRESS.md  README.md  REFACTOR_ANALYSIS.md  REFACTOR_SUMMARY.md  SECURITY.md  SUPPORT.md  TEST_REFACTOR_AND_CODE_IMPROVEMENTS.md  TEST_REFACTOR_SUMMARY.md  TOP_PROBLEM_FIXES.md  clippy.toml  code_review.md  code_review_from_tests.md  plan.md  plan2.md  record.md  review.md  rustfmt.toml  suggest.md  test_refactor_plan.md  top_problem.md  top_problem_arch.md  (+2 more)
.VSCodeCounter/2026-01-11_07-48-39/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-01-11_07-49-31/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.cargo-target/: .rustc_info.json
.cargo-target/debug/.fingerprint/cfg-if-2d20780be38939e6/: output-lib-cfg_if
.cargo-target/debug/.fingerprint/serde-cbc1ead2e3f76bf4/: build-script-build-script-build.json
.cargo-target/debug/.fingerprint/unicode-ident-4fec18d14b15363e/: output-lib-unicode_ident
.cargo-target/debug/.fingerprint/version_check-e67c589c3c1ced77/: output-lib-version_check
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  security.md
.github/workflows/: benchmark.yml  ci.yml  docs.yml  release.yml
.sisyphus/drafts/: EXECUTION-DASHBOARD.md  phase-a-1-fix-nfa-bug.md  phase-a-2-documentation-accuracy.md  phase-a-3-verify-tests.md  phase-a-status.md  phase-b-1-ci-cd.md  phase-b-2-benchmarks.md  phase-b-5-rule-perf-cli.md
.sisyphus/plans/: EXECUTIVE-SUMMARY.md  production-readiness-2026-01-12.md  production-readiness-UPDATED.md
docs/: COMMERCIAL_GUIDE.md  COMMERCIAL_ROADMAP.md  FINAL_TEST_REPORT.md  OPTIMIZATION_REPORT.md  PERFORMANCE_OPTIMIZATION.md  QUICKSTART.md  SHOWCASE.md  TEST_REPORT.md  api.md  architecture-flow.md  architecture.md  benchmark_results.md  complex_rules_test_report.md  debug_vs_release_comparison.md  deployment.md  e2e_testing_guide.md  performance-analysis.md  phase_d_final_summary.md  phase_d_report.md  status.md  troubleshooting.md  tutorial.md
examples/: basic_usage.md  event_simulator.rs  lua_rule_package.md  perf_comparison.rs  test_helpers_demo.rs  wasm_rule_package.md
kestrel-ac-dfa/: Cargo.toml
kestrel-ac-dfa/src/: builder.rs  lib.rs  matcher.rs  pattern.rs  perf.rs
kestrel-benchmark/: Cargo.toml
kestrel-benchmark/benches/: hybrid_benchmark.rs  quick_perf_test.rs
kestrel-benchmark/src/: latency.rs  main.rs  memory.rs  nfa.rs  stress_test.rs  throughput.rs  utils.rs  wasm_runtime.rs
kestrel-cli/: Cargo.toml  README.md
kestrel-cli/src/: main.rs
kestrel-core/: Cargo.toml  README.md
kestrel-core/src/: action.rs  alert.rs  config_reload.rs  deterministic.rs  eventbus.rs  lib.rs  metrics.rs  object_pool.rs  replay.rs  runtime_comparison.rs  time.rs
kestrel-core/tests/: deterministic.rs
kestrel-ebpf/: Cargo.toml  README.md  build.rs
kestrel-ebpf/src/: executor.rs  health.rs  lib.rs  lsm.rs  normalize.rs  platform.rs  programs.rs  pushdown.rs
kestrel-ebpf/src/bpf/: lsm.bpf.c  main.bpf.c  vmlinux.h
kestrel-ebpf/tests/: integration_test.rs  performance_benchmark.rs
kestrel-engine/: Cargo.toml  README.md
kestrel-engine/src/: lib.rs  runtime.rs
kestrel-engine/tests/: detection_scenarios.rs  integration_e2e.rs  production_scenarios.rs
kestrel-eql/: Cargo.toml  README.md
kestrel-eql/src/: ast.rs  codegen_wasm.rs  compiler.rs  eql.pest  error.rs  ir.rs  lib.rs  parser.rs  semantic.rs
kestrel-eql/tests/: eql_tests.rs
kestrel-event/: Cargo.toml  PLANNING.md  README.md
kestrel-event/src/: lib.rs
kestrel-ffi/: Cargo.toml
kestrel-ffi/examples/: advanced  advanced.c  simple  simple.c
kestrel-ffi/include/: kestrel.h
kestrel-ffi/src/: engine.rs  error.rs  event.rs  lib.rs  metrics.rs  types.rs
kestrel-hybrid-engine/: Cargo.toml
kestrel-hybrid-engine/src/: analyzer.rs  engine.rs  lib.rs  release_perf.rs
kestrel-hybrid-engine/tests/: complex_rules_test.rs  comprehensive_e2e.rs  comprehensive_functional_test.rs  e2e_real_world_scenarios.rs  e2e_test.rs  integration_test.rs  multi_step_debug.rs  nfa_debug_test.rs
kestrel-lazy-dfa/: Cargo.toml
kestrel-lazy-dfa/src/: cache.rs  converter.rs  detector.rs  dfa.rs  lib.rs
kestrel-lazy-dfa/tests/: integration_test.rs
kestrel-nfa/: Cargo.toml  README.md
kestrel-nfa/src/: capture_tests.rs  engine.rs  lib.rs  metrics.rs  state.rs  store.rs
kestrel-rules/: Cargo.toml  README.md
kestrel-rules/src/: compiler.rs  lib.rs
kestrel-runtime-lua/: Cargo.toml  README.md
kestrel-runtime-lua/src/: lib.rs
kestrel-runtime-wasm/: Cargo.toml  README.md
kestrel-runtime-wasm/src/: lib.rs
kestrel-schema/: Cargo.toml  PLANNING.md  README.md
kestrel-schema/src/: lib.rs
rules/: README.md  example_rule.json
rules/credential_access/: manifest.json  predicate.lua  rule.eql
rules/data_exfiltration/: manifest.json  predicate.lua  rule.eql
rules/lateral_movement/: manifest.json  predicate.lua  rule.eql
rules/lua_example_rule/: README.md  manifest.json  predicate.lua
rules/privilege_escalation/: manifest.json  predicate.lua  rule.eql
rules/ransomware_detection/: manifest.json  predicate.lua  rule.eql
rules/reverse_shell_detection/: manifest.json  predicate.lua  rule.eql
rules/wasm_example_rule/: README.md  manifest.json  rule.wat
scripts/: build.sh  e2e-test.sh  install.sh
target_nolink/: .rustc_info.json
target_nolink/debug/.fingerprint/cfg-if-2d20780be38939e6/: output-lib-cfg_if
target_nolink/debug/.fingerprint/libc-a0949981e1eda769/: build-script-build-script-build  build-script-build-script-build.json
target_nolink/debug/.fingerprint/serde-cbc1ead2e3f76bf4/: build-script-build-script-build
(+2 files in other folders)
