[package]
name = "kestrel-benchmark"
version = "0.1.0"
edition = "2021"
description = "Kestrel Performance Benchmark Suite"
authors = ["Kestrel Team"]

[dependencies]
kestrel-schema = { path = "../kestrel-schema" }
kestrel-event = { path = "../kestrel-event" }
kestrel-nfa = { path = "../kestrel-nfa" }
kestrel-engine = { path = "../kestrel-engine", features = ["wasm", "lua"] }
kestrel-core = { path = "../kestrel-core" }
kestrel-runtime-wasm = { path = "../kestrel-runtime-wasm" }
kestrel-ac-dfa = { path = "../kestrel-ac-dfa" }
kestrel-lazy-dfa = { path = "../kestrel-lazy-dfa" }
kestrel-hybrid-engine = { path = "../kestrel-hybrid-engine" }
kestrel-eql = { path = "../kestrel-eql" }

criterion = "0.8"
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
wat = "1.0"

[dev-dependencies]
test-log = "0.2"

[[bin]]
name = "kestrel-benchmark"
path = "src/main.rs"

[[bench]]
name = "hybrid_benchmark"
harness = false
