[package]
name = "kestrel-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
smallvec = { workspace = true }
ahash = { workspace = true }
kestrel-schema = { path = "../kestrel-schema" }
kestrel-event = { path = "../kestrel-event" }
