[package]
name = "kestrel-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
smallvec = { workspace = true }
ahash = { workspace = true }
uuid = { version = "1.11", features = ["v4", "serde"] }
sha2 = { version = "0.10", features = ["asm"] }
futures = { version = "0.3", features = ["executor"] }
kestrel-schema = { path = "../kestrel-schema" }
kestrel-event = { path = "../kestrel-event" }
kestrel-eql = { path = "../kestrel-eql", optional = true }
kestrel-runtime-wasm = { path = "../kestrel-runtime-wasm", optional = true }
kestrel-runtime-lua = { path = "../kestrel-runtime-lua", optional = true }

[features]
default = []
eql = ["kestrel-eql"]
wasm = ["kestrel-runtime-wasm"]
lua = ["kestrel-runtime-lua"]
