[package]
name = "kestrel-ebpf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = []
enforcement = []

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aya = { version = "0.13" }
aya-log = { version = "0.2" }
nix = { version = "0.31", features = ["user"] }
libc = "0.2"
serde_json = "1.0"
kestrel-event = { path = "../kestrel-event" }
kestrel-schema = { path = "../kestrel-schema" }
kestrel-core = { path = "../kestrel-core" }
kestrel-nfa = { path = "../kestrel-nfa" }
lru = "0.16"

[build-dependencies]
# aya-build = { version = "0.1" }  # Not using aya-build, using clang directly
