[package]
name = "kestrel-eql"
version = "0.1.0"
edition = "2021"
authors = ["Kestrel Team"]
description = "EQL compiler and runtime for Kestrel detection engine"

[dependencies]
# Workspace dependencies
kestrel-schema = { path = "../kestrel-schema" }

# Parser
pest = "2.7"
pest_derive = "2.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.42", features = ["full", "test-util"] }

[lib]
name = "kestrel_eql"
path = "src/lib.rs"
