[package]
name = "kestrel-rules"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
kestrel-schema = { path = "../kestrel-schema" }
kestrel-core = { path = "../kestrel-core" }
notify = { version = "7.0", features = ["serde"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.13"
