[package]
name = "kestrel-runtime-lua"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ahash = { workspace = true }
mlua = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
kestrel-schema = { path = "../kestrel-schema" }
kestrel-event = { path = "../kestrel-event" }
kestrel-nfa = { path = "../kestrel-nfa" }
