[package]
name = "kestrel-runtime-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wasmtime = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
kestrel-schema = { path = "../kestrel-schema" }
kestrel-event = { path = "../kestrel-event" }
