[package]
name = "kestrel-runtime-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ahash = { workspace = true }
wasmtime = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
kestrel-schema = { path = "../kestrel-schema" }
kestrel-event = { path = "../kestrel-event" }
kestrel-nfa = { path = "../kestrel-nfa" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
