[package]
name = "kestrel-schema"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
ahash = { workspace = true, features = ["serde"] }
smallvec = { workspace = true }
dashmap = { workspace = true }
